# KittyBotBackend

./: .env.example  Cargo.toml  README.md  package-lock.json  package.json  server.js
.github/workflows/: build-windows.yml
src/: ipc_server.rs  main.rs  middleware.rs
src/routes/: auth.rs  bot.rs
