[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
